2011-06-19  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/SGlUniform.cxx:
	* Stones/SGlUniform.h:
	* Stones/TringTvor.h:
	* Stones/TubeTvor.h:
	Use SRefCounted instead of ZRCStone.

2010-10-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Mover.cxx:
	Add includes missing after GledCore cleanup.

2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix some issues with mixed-mode rendering.

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Initialize normal/color/texture modes to none in all ctors.
	Add setters for those mode -- magickally direct assignment to
	data-members does not work in CINT.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	Bugfix - remove extra line.

2010-08-15  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/RectTerrain.cxx:
	* Stones/TringTvor.cxx:
	Remove unnecesary include / commented line.

2010-08-15  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SMorph.cxx:
	* Glasses/SMorph.h:
	Support limits on theta / phi so that only part of the surface can
	be drawn.

2010-07-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZImage.cxx:
	* Glasses/ZImage.h:
	Add support for minifaction filters using mip-maps.

	* Rnr/GL/ZImage_GL_Rnr.cxx:
	Generate mip-maps automatically when needed.

2010-07-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/WSPoint.cxx:
	* Glasses/WSSeed.cxx:
	White-space changes.

2010-06-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Rect.h:
	Increase weed precision of mU/VLen.

2010-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for per-triangle texture coordinates.

	* Stones/TringTvor.cxx:
	* Stones/TringTvor.h:
	Introduce mode enum (per-vertex, per-triangle) and use it for
	normals, color and texture.
	Modify constructors and Reset() functions to support that.
	Add functions for per-triangle texture handling.

	* Rnr/GL/TringTvor_GL_Rnr.cxx:
	* Rnr/GL/TringTvor_GL_Rnr.h:
	Restructure to support all possible per-vertex / per-triangle
	combinations of normal, color and texture rendering.