@@ -1,3 +1,10 @@
+2011-06-24  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* ACTC/tc.cxx:
+	* Glasses/SMorph.cxx:
+	* Rnr/GL/ZImage_GL_Rnr.cxx:
+	Fix some compilation warnings with gcc-4.6.
+
 2011-06-19  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Stones/SGlUniform.cxx:
